update schemas more
